--- a/DAY 2/INDEX.html
+++ b/DAY 2/INDEX.html
@@ -29,5 +29,10 @@
     <a href="https://www.watim.com.pk">click here</a>
 
 <img src="image 1.jpg" width="500px" height="500px" >
+<table>
+    <tr>
+        <td>1</td>
+    </tr>
+</table>
 </body>
 </html>
