--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -9,16 +9,23 @@
             color: aqua;
             text-align: center;
             font-size: 72px;
+            text-shadow: 2px 2px;
         }
         h2{
             font-weight: 85px;
             text-align: start;
             font-family: monospace;
         }
+        .srh {
+            color: rgb(17, 0, 255);
+            font-size: xx-large;
+        }
     </style>
 </head>
 <body>
     <h1>tariq</h1>
+    <h1 class="srh">Ussssss</h1>
+
     <h2>usama</h2>
     <h3>junaid</h3>
     <h4>khalid</h4>
